--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.23.2",
-    "swagger-jsdoc": "^6.2.5",
+    "swagger-jsdoc": "5.0.1",
     "swagger-ui-express": "^4.5.0"
   },
   "devDependencies": {
