--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
+    "redis": "^4.3.1",
     "sequelize": "^6.23.2",
     "swagger-jsdoc": "5.0.1",
     "swagger-ui-express": "^4.5.0"
